Fix code wrapping

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -159,6 +159,13 @@ code {
     border: 1px solid var(--border-colour);
     color: var(--text-colour);
     transition: background-color 0.3s ease, border-color 0.3s ease;
+    text-wrap-mode: nowrap;
+}
+
+// One exception lol
+#fullModelTable code
+{
+    text-wrap-mode: unset;
 }
 
 pre {
@@ -241,7 +248,6 @@ blockquote cite::before {
 
 .note, .warning, .info, .tip, .important, .caution {
     padding: 1em 1.25em;
-    border-radius: 0;
     border-left: 4px solid;
     box-shadow: none;
     margin: 1.5em 0;
